--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,15 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.session.store-type=redis
+spring.session.redis.flush-mode=immediate
+
+
+#global key use this
+#spring.session.redis.namespace=spring:session
+#spring.session.timeout=1200s
 
 
 #POPULATING CONFIG
